# nexus-trade-engine

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Dockerfile.dev  EXECUTION_ORDER.md  GOVERNANCE.md  LICENSE  Makefile  PRODUCT.md  README.md  SECURITY.md  STRATEGY.md  _exp_dispatch.py  _exp_probe.py  alembic.ini  conftest.py  cov_output.txt  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  conflicting-kaizen.yml  coverage-ramp.yml  load-test.yml  publish-images.yml  release-please.yml  security.yml  update-golden.yml
alembic/: env.py
alembic/versions/: 001_tax_lots.py  002_normalize_legacy_roles.py
config/: coverage-floors.json  coverage-module-floors.json  data_providers.example.yaml
docs/: LAST_AUDIT.md  PLUGIN_DEV_GUIDE.md  README.md  RELEASING.md  api-reference.md  architecture.md  contributors.md  coverage-ramp.md  data-model.md  decisions.md  deployment.md  development-setup.md  development.md  known-limitations.md  limitations-and-debt.md  limitations.md  mcp-server.md  mkdocs.yml  requirements.txt  runbooks.md  tech-debt.md  technical-decisions.md  websocket.md  websockets.md
docs/adr/: 0001-scaffold-tech-choices.md  0002-auth-rbac.md  0003-mobile-app-strategy.md  0004-cost-model-as-input.md  0004-multi-provider-auth.md  0004-task-queue-taskiq.md  0005-pluggable-data-providers.md  0005-plugin-sandbox.md  0005-valkey-over-redis.md  0006-bcrypt-fernet.md  0006-task-queue-taskiq.md  0006-taskiq-valkey.md  0007-jwt-api-keys-oauth.md  0007-strategy-sandbox-allowlist-imports.md  0008-pluggable-metrics-backend.md  0009-cross-replica-eventbus-bridge.md  0010-coverage-ramp-policy.md  0010-instrument-asset-class-taxonomy.md  0010-live-execution-alpaca.md  0010-mcp-server.md  0010-multi-strategy-orchestration.md  0010-static-ast-validation-toctou-loading.md  0011-async-native-locking.md  0011-roadmap-manifest.md  0011-runtime-introspection-blocking.md  0012-mcp-server.md  0012-safe-identifier-validation.md  0012-sandbox-resource-limits-single-flight.md  0013-legal-score-compliance-gate.md  README.md  template.md
docs/api/: README.md  api-keys.md  auth.md  backtest.md  client-errors.md  data-model.md  data.md  endpoints.md  health.md  legal.md  market-data.md  marketplace.md  mfa.md  observability.md  portfolio.md  privacy-legal.md  privacy.md  reference.md  scoring.md  strategies.md  system.md  tax.md  trading.md  webhooks.md  websocket.md
docs/api-reference/: auth.md  backtest.md  index.md  legal.md  market-data.md  marketplace.md  portfolios.md  privacy.md  reference.md  routes.md  scoring.md  strategies.md  system.md  tax.md  webhooks.md  websocket.md
docs/architecture/: README.md  analytics-and-governance.md  analytics-scoring.md  analytics.md  brokers-and-live-trading.md  components.md  core-analytics.md  core-domains.md  data-flow.md  data-model.md  data-providers.md  database.md  decisions.md  mcp-server.md  mcp.md  multi-strategy.md  orchestration.md  orchestrator.md  overview.md  plugins.md  strategy-orchestration.md  tasks.md
docs/deployment/: overview.md
docs/development/: setup.md
docs/known-limitations/: auth-and-sandbox-drift.md
docs/legal/: processors.md
docs/mcp/: capability-audit.md  tool-catalog.md
docs/observability/: logging.md  metrics.md
docs/operations/: backup-and-recovery.md  deployment.md  dr-drill-checklist.md  known-limitations.md  load-testing.md  runbooks.md  slos.md
engine/: alembic.ini  app.py  config.py  deps.py  instruments.py  main.py  requirements.txt  tasks.py
engine/api/: body_size_limit.py  cors.py  ip_utils.py  legal.py  rate_limit.py  rate_limit_valkey.py  router.py  security_headers.py  sessions.py  validators.py
engine/auth/: __init__.py  backend.py  base.py  github.py  oidc.py  rbac.py
engine/brokers/: __init__.py  alpaca.py  ibkr.py
engine/core/: audit_log.py  backtest_runner.py  benchmark_comparison.py  capital_allocation.py  corp_actions.py  cost_model.py  crypto_costs.py  cumulative_returns.py  distribution_metrics.py  drawdown_analytics.py  excursion_stats.py  execution_costs.py  holding_costs.py  instruments.py  market_calendar.py  market_impact.py  metrics.py  metrics_extras.py  monte_carlo.py  (+24 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
legal/: data-provider-attributions.md  eula.md  marketplace-eula.md  privacy-policy.md  risk-disclaimer.md  terms-of-service.md
nexus_trade_engine/: __init__.py
scripts/: close_conflicting_kaizen_prs.py  compose-entrypoint.py  coverage_ramp.py  generate_mcp_api_surface.py  init_db.sql  roadmap_status.py  seed_data.py
sdk/: setup.py
site/: 404.html  index.html  sitemap.xml
tests/: conftest.py  factories.py  test_admin_api.py  test_allocation.py  test_alpaca_broker.py  test_api_key_scopes.py  test_api_keys_service.py  test_api_market_data.py  test_api_marketplace.py  test_api_reference.py  test_api_routes.py  test_app_coverage.py  test_apply_role_mapping_helper.py  test_asset_type.py  test_ast_validator.py  test_audit_log.py  test_auth.py  test_auth_api_keys.py  test_auth_apply_role_mapping.py  test_auth_authorize_url_coverage.py  test_auth_authorize_url_hardening.py  test_auth_base_and_registry.py  test_auth_dependency_coverage.py  test_auth_dependency_integration.py  test_auth_e2e.py  test_auth_explicit_role_deny.py  test_auth_ldap_security.py  test_auth_ldap_tls_and_log_sanitize.py  test_auth_local_provider.py  test_auth_map_roles_properties.py  test_auth_overwrite_role_on_login.py  test_auth_rbac_roles.py  test_auth_recent_integration.py  test_auth_registry.py  test_auth_require_roles.py  test_auth_role_mapping.py  test_auth_role_mapping_overhaul.py  test_auth_role_promotion.py  test_auth_role_promotion_security_fix.py  test_auth_role_sanitization_comprehensive.py  (+361 more)
(+603 files in other folders)
