[project]
name = "nexus-trade-engine"
version = "0.1.0"
description = "Algorithmic trading backtesting and execution engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "polars>=1.16.0",
    "taskiq>=0.11.0",
    "taskiq-fastapi>=0.3.0",
    "taskiq-redis>=1.0.0",
    "valkey>=6.0.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "sentry-sdk[fastapi]>=2.18.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.0",
    "orjson>=3.10.0",
    "numpy>=2.4.4",
    "pyjwt[crypto]>=2.10.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.115.0",
    "ruff>=0.8.0",
    "basedpyright>=1.22.0",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "aiosqlite>=0.20.0",
]
ldap = [
    "python-ldap>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4",
    "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SLF",
    "SIM", "TID", "TCH", "ARG", "ERA", "PGH", "PL", "TRY",
    "FLY", "PERF", "RUF",
]
ignore = ["S101", "TRY003", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"engine/api/routes/*.py" = ["B008", "B904", "S105", "PLC0415", "TC001", "TC002", "TC003", "ARG001", "TRY300", "TRY301", "PLR2004", "RUF013"]
"engine/api/auth/dependency.py" = ["B008"]
"engine/api/auth/google.py" = ["S105", "PLC0415", "TC002"]
"engine/api/auth/github_oauth.py" = ["S105", "PLC0415", "TC002"]
"engine/api/auth/oidc.py" = ["PLC0415", "TC002"]
"engine/api/auth/ldap.py" = ["PLC0415", "TC002"]
"engine/api/auth/jwt.py" = ["TRY300"]
"engine/app.py" = ["PLC0415"]
"engine/config.py" = ["S105"]
"engine/data/providers/*.py" = ["ARG002", "PLC0415", "TRY300", "TRY004"]
"engine/plugins/registry.py" = ["PLC0415"]
"engine/db/models.py" = ["UP042"]
"sdk/nexus_sdk/scoring.py" = ["UP042"]
"tests/*" = ["PLR2004", "S105", "S106", "PT019", "PLC0415", "ARG001", "ARG002", "ARG005", "PT011", "PT018", "E501", "SLF001", "TC002", "TC003"]

[tool.ruff.lint.isort]
known-first-party = ["engine"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnknownMemberType = false
extraPaths = ["sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = [".", "sdk"]
addopts = "-ra --strict-markers --cov=engine --cov=nexus_sdk --cov-report=term-missing --cov-report=html"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

[tool.coverage.run]
source = ["engine", "nexus_sdk"]
omit = ["tests/*", "engine/db/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
