[project]
name = "nexus-trade-engine"
version = "0.1.0"
description = "Algorithmic trading backtesting and execution engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "polars>=1.16.0",
    "taskiq>=0.11.0",
    "taskiq-fastapi>=0.3.0",
    "taskiq-redis>=1.0.0",
    "valkey>=6.0.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "prometheus-client>=0.20.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.0",
    "orjson>=3.10.0",
    "numpy>=2.4.4",
    "pyjwt[crypto]>=2.10.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "mcp>=1.0.0",
    "sse-starlette>=3.4.0",
    # zoneinfo has no bundled IANA tz database on minimal Python images
    # (e.g. the python:3.12 CI container); ship tzdata so ZoneInfo("US/Eastern")
    # and friends resolve at runtime.
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.115.0",
    "ruff>=0.8.0",
    "basedpyright>=1.22.0",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "aiosqlite>=0.20.0",
    "fakeredis[lua]>=2.0.0",
]
ldap = [
    "python-ldap>=3.4.0",
]
docs = [
    # MkDocs + Material is the documentation build stack for this Python
    # project (see mkdocs.yml + docs/README.md). Material 9.x bundles
    # Mermaid.js rendering via pymdownx.superfences; no separate plugin.
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4",
    "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SLF",
    "SIM", "TID", "TCH", "ARG", "ERA", "PGH", "PL", "TRY",
    "FLY", "PERF", "RUF",
]
ignore = ["S101", "TRY003", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S108"]
"_exp_probe.py" = ["T201", "SLF001", "ARG001", "ARG002"]
"_exp_dispatch.py" = ["T201", "ARG001", "ARG002"]
"engine/api/routes/*.py" = ["B008", "B904", "S105", "PLC0415", "TC001", "TC002", "TC003", "ARG001", "TRY300", "TRY301", "PLR2004", "RUF013", "E501", "PLW0603", "PT028"]
"engine/api/auth/dependency.py" = ["B008"]
"engine/api/auth/google.py" = ["S105", "PLC0415", "TC002"]
"engine/api/auth/github_oauth.py" = ["S105", "PLC0415", "TC002"]
"engine/api/auth/oidc.py" = ["PLC0415", "TC002", "TRY301"]
"engine/api/auth/ldap.py" = ["PLC0415", "TC002"]
"engine/api/auth/jwt.py" = ["TRY300"]
"engine/api/rate_limit.py" = ["S105"]
"engine/api/websocket/manager.py" = ["ERA001"]
"engine/app.py" = ["PLC0415", "SLF001"]
"engine/config.py" = ["S105"]
"engine/data/providers/*.py" = ["ARG002", "PLC0415", "TRY300", "TRY004"]
"engine/plugins/registry.py" = ["PLC0415"]
"engine/plugins/sandbox/__init__.py" = ["PLC0415"]
"engine/plugins/sandbox/core/policy.py" = ["PLR0911"]
"engine/plugins/trust_levels.py" = ["N806"]
"engine/db/models.py" = ["UP042"]
"engine/reference/seed.py" = ["E501"]
"engine/core/options/black_scholes.py" = ["N803", "PLR2004"]
"engine/observability/http_metrics.py" = ["PLR2004", "PLR0911"]
"engine/observability/metrics.py" = ["ARG002"]
"engine/core/cost_model.py" = ["ARG002", "PLR2004"]
"engine/tasks/worker.py" = ["PLC0415", "TRY301"]
"engine/tasks/definitions.py" = ["PLC0415", "TRY301"]
"engine/events/bus.py" = ["PLC0415", "E501"]
"engine/mcp/**/*.py" = ["PLC0415", "TRY300", "TRY301", "E501", "ARG002", "RUF013"]
"engine/mcp/server.py" = ["PLR0911"]
"engine/core/oms/risk.py" = ["PLC0415", "ARG002"]
"engine/core/execution/live.py" = ["ARG002", "S311"]
"engine/execution/live_backend.py" = ["ARG002"]
"engine/core/execution/paper.py" = ["S311"]
"engine/core/execution/factory.py" = ["PLC0415"]
"engine/core/execution/backtest.py" = ["S311", "PLR2004"]
"engine/core/optimization/samplers.py" = ["S311"]
"engine/core/live/kill_switch.py" = ["S105"]
"engine/core/risk_limits.py" = ["PLR0912"]
"engine/core/tax/wash_sale.py" = ["PLR0912"]
"engine/core/oms/order.py" = ["PLR0911", "SIM102"]
"engine/core/risk_engine.py" = ["PLR0911", "PLR2004", "E501", "SIM102"]
"engine/core/strategy_evaluator.py" = ["PLR2004"]
"engine/core/rolling_benchmark.py" = ["PLR2004"]
"engine/core/rolling_correlation.py" = ["PLR2004", "PERF401"]
"engine/core/rolling_metrics.py" = ["PLR2004"]
"engine/core/rolling_trade_stats.py" = ["PLR2004"]
"engine/core/metrics_extras.py" = ["PLR2004"]
"engine/core/portfolio_aggregator.py" = ["PLR2004"]
"engine/core/portfolio_concentration.py" = ["PLR2004", "E501"]
"engine/core/cumulative_returns.py" = ["PLR2004"]
"engine/core/distribution_metrics.py" = ["PLR2004"]
"engine/core/drawdown_analytics.py" = ["PLR2004"]
"engine/core/benchmark_comparison.py" = ["PLR2004", "PLR0912", "PLR0915", "E501"]
"engine/core/corp_actions.py" = ["PLR0912", "PLR0915"]
"engine/core/optimization/study.py" = ["PLR0124"]
"engine/events/webhook_dispatcher.py" = ["PLR2004"]
"engine/plugins/manifest.py" = ["E501"]
"sdk/nexus_sdk/scoring.py" = ["UP042"]
"sdk/nexus_sdk/types.py" = ["PLR2004"]
"sdk/nexus_sdk/strategy.py" = ["B027", "ARG002"]
"sdk/nexus_sdk/testing.py" = ["ARG002", "E501"]
"sdk/setup.py" = ["E501", "SIM115"]
"strategies/examples/**/*.py" = ["PLR2004", "E501", "F401"]
"scripts/*.py" = ["S110", "E501", "SIM115"]
"tests/*" = ["PLR2004", "S105", "S106", "PT019", "PLC0415", "ARG001", "ARG002", "ARG005", "PT011", "PT018", "E501", "SLF001", "TC002", "TC003", "B008", "N806", "DTZ001"]

[tool.ruff.lint.isort]
known-first-party = ["engine", "nexus_sdk"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnknownMemberType = false
extraPaths = ["sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = [".", "sdk"]
addopts = "-ra --strict-markers --cov=engine --cov=nexus_sdk --cov-report=term-missing --cov-report=html"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

[tool.coverage.run]
source = ["engine", "nexus_sdk"]
omit = ["tests/*", "engine/db/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
